--- a/requirements.txt
+++ b/requirements.txt
@@ -1,116 +1,86 @@
 amqp==5.1.1
-asgiref==3.6.0
-asttokens==2.2.1
-async-generator==1.10
+asgiref==3.7.2
 attrs==23.1.0
 Automat==22.10.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
 billiard==4.1.0
-bleach==6.0.0
-bs4==0.0.1
 celery==5.3.1
-certifi==2022.12.7
+certifi==2023.7.22
 cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.6
+charset-normalizer==3.2.0
+click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 constantly==15.1.0
-cryptography==41.0.1
+contourpy==1.1.0
+cryptography==41.0.3
 cssselect==1.2.0
-decorator==5.1.1
+cycler==0.11.0
 defusedxml==0.7.1
-distlib==0.3.6
-Django==4.2.1
-django-allauth==0.54.0
+diff-match-patch==20230430
+distlib==0.3.7
+Django==4.2.4
+django-admin-actions==0.1.1
 django-appconf==1.0.5
-django-ckeditor==6.5.1
-django-cors-headers==4.2.0
-django-js-asset==2.0.0
-django-quill-editor==0.1.40
+django-import-export==3.3.1
 django-select2==8.1.2
-django-sslcommerz==1.0.0a0
-django-summernote==0.8.20.0
 django-tinymce==3.6.1
-django-tinymce4-lite==1.8.0
-djangorestframework==3.14.0
-dnspython==2.3.0
-exceptiongroup==1.1.1
-executing==1.2.0
-filelock==3.11.0
-h11==0.14.0
+et-xmlfile==1.1.0
+filelock==3.12.2
+fonttools==4.42.1
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
-ipython==8.14.0
 itemadapter==0.8.0
 itemloaders==1.1.0
-jedi==0.18.2
 jmespath==1.0.1
-jsmin==3.0.1
+kiwisolver==1.4.5
 kombu==5.3.1
-lxml==4.9.2
-marshmallow==3.19.0
-matplotlib-inline==0.1.6
-mysql-connector-python==8.0.33
-numpy==1.24.3
-oauthlib==3.2.2
-outcome==1.2.0
+lxml==4.9.3
+MarkupPy==1.14
+matplotlib==3.7.2
+numpy==1.25.2
+odfpy==1.4.1
+openpyxl==3.1.2
 packaging==23.1
-pandas==2.0.1
+pandas==2.1.0
 parsel==1.8.1
-parso==0.8.3
-pickleshare==0.7.5
-platformdirs==3.2.0
+Pillow==10.0.0
+platformdirs==3.10.0
+plotly==5.17.0
 prompt-toolkit==3.0.39
 Protego==0.3.0
-protobuf==3.20.3
-pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyDispatcher==2.0.7
-Pygments==2.15.1
-PyJWT==2.7.0
-pymongo==4.3.3
-pyodbc==4.0.39
 pyOpenSSL==23.2.0
-PySocks==1.7.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
-python3-openid==3.2.0
 pytz==2023.3
+PyYAML==6.0.1
 queuelib==1.6.2
 redis==5.0.0
-requests @ file:///C:/Users/udoy/Downloads/requests-main/requests-main
+reportlab==4.0.4
+requests==2.31.0
 requests-file==1.5.1
-requests-oauthlib==1.3.1
 Scrapy==2.10.0
-selenium==4.9.0
 service-identity==23.1.0
 six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
 sqlparse==0.4.4
-sslcommerz-sdk==1.0.4
-stack-data==0.6.2
-stripe==5.4.0
+tablib==3.5.0
+tenacity==8.2.3
 tldextract==3.4.4
-traitlets==5.9.0
-trio==0.22.0
-trio-websocket==0.10.2
 Twisted==22.10.0
 twisted-iocpsupport==1.0.4
 typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==1.26.15
+urllib3==2.0.4
 vine==5.0.0
-virtualenv==20.21.0
+virtualenv==20.24.2
 w3lib==2.1.2
 wcwidth==0.2.6
-webencodings==0.5.1
-wsproto==1.2.0
+xlrd==2.0.1
+xlwt==1.3.0
 zope.interface==6.0
