--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,16 @@
-amqp==5.1.1
 asgiref==3.7.2
-attrs==23.1.0
-Automat==22.10.0
-billiard==4.1.0
-celery==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-constantly==15.1.0
-contourpy==1.1.0
-cryptography==41.0.3
-cssselect==1.2.0
-cycler==0.11.0
-defusedxml==0.7.1
-diff-match-patch==20230430
-distlib==0.3.7
-Django==4.2.4
-django-admin-actions==0.1.1
+Django==4.2.5
 django-appconf==1.0.5
-django-import-export==3.3.1
 django-select2==8.1.2
 django-tinymce==3.6.1
-et-xmlfile==1.1.0
-filelock==3.12.2
-fonttools==4.42.1
-hyperlink==21.0.0
-idna==3.4
-incremental==22.10.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-jmespath==1.0.1
-kiwisolver==1.4.5
-kombu==5.3.1
-lxml==4.9.3
-MarkupPy==1.14
-matplotlib==3.7.2
-numpy==1.25.2
-odfpy==1.4.1
-openpyxl==3.1.2
+numpy==1.26.0
 packaging==23.1
-pandas==2.1.0
-parsel==1.8.1
-Pillow==10.0.0
-platformdirs==3.10.0
+pandas==2.1.1
+Pillow==10.0.1
 plotly==5.17.0
-prompt-toolkit==3.0.39
-Protego==0.3.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-PyDispatcher==2.0.7
-pyOpenSSL==23.2.0
-pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2023.3
-PyYAML==6.0.1
-queuelib==1.6.2
-redis==5.0.0
-reportlab==4.0.4
-requests==2.31.0
-requests-file==1.5.1
-Scrapy==2.10.0
-service-identity==23.1.0
+pytz==2023.3.post1
 six==1.16.0
 sqlparse==0.4.4
-tablib==3.5.0
 tenacity==8.2.3
-tldextract==3.4.4
-Twisted==22.10.0
-twisted-iocpsupport==1.0.4
-typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==2.0.4
-vine==5.0.0
-virtualenv==20.24.2
-w3lib==2.1.2
-wcwidth==0.2.6
-xlrd==2.0.1
-xlwt==1.3.0
-zope.interface==6.0
